<resources>
    <string name="app_name">EDUMN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_waiting_groups">Invited Groups</string>

    <string name="menu_questions">Questions</string>
    <string name="menu_ask_question">Ask Question</string>
    <string name="menu_topics">Topics</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_log_in">Log In</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_register">Register</string>
    <string name="menu_my_questions">My Questions</string>
    <string name="menu_my_answers">My Answers</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_meeting">Meetings</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_user">User Operations</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="image_desc">Image Description</string>
    <string name="start">Got It</string>

    <string name="slide_1_title">Welcome to
                                Mobile Educational Network</string>

    <string name="slide_2_title">When you stuck on a problem,
                                get help from world wide
                                people with educational social network</string>

    <string name="slide_3_title">Want to share your question
                                only with your friends?
                                Then start your meeting</string>

    <string name="slide_4_title">Start asking / answer questions
                                with educational social network</string>

    <string name="play_again_desc">To see the welcome slider again,
                                    goto Settings -> apps ->
                                    welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_settings">Settings</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_last_name">Enter your last name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password_length">Password must be at least 6 character</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_password_again">Passwords are not matched!</string>
    <string name="err_msg_phonenumber">Enter a phonenumber</string>

    <string name="login_message">Login To\nYour Account</string>
    <string name="logo_description">Logo</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="icon_description">Icon</string>
    <string name="log_in">Log In</string>
    <string name="not_have_account">Don"'"t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="register_message">Join Now To\nEducational Network</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="birthday">Birthday</string>
    <string name="e_mail_required">E-Mail*</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="password_required">Password*</string>
    <string name="password_again">Password Again</string>
    <string name="phone">Phone</string>
    <string name="license_agreement">I accept the licence agreement</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="about_us">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nunc vehicula dictum tincidunt. Nulla malesuada, velit nec bibendum rhoncus,
        lorem nisl iaculis odio, at placerat mi nulla vel enim. Suspendisse tincidunt
        risus vitae nisi sodales tempor. Etiam congue felis eros. Nulla eget mauris
        massa. Vivamus suscipit velit nunc, at tempor magna ullamcorper sit amet.
        Phasellus ac pretium est, quis molestie ante. Integer dictum, diam ut
        efficitur faucibus, odio mauris vulputate nisi, in facilisis quam diam in mi.
        Aenean ornare, lectus ut ullamcorper congue, dolor metus vehicula purus, vel
        pellentesque ex neque id enim. Praesent ut nisl id orci egestas pellentesque.
        Vestibulum lobortis justo eu ultrices fringilla. Mauris dignissim, quam vitae
        consequat accumsan, mauris urna consequat lectus, id luctus metus non felis.
        vel nulla eget sapien pretium eleifend. Sed et massa non felis posuere mollis eget
        et augue. \n\n
        Aliquam venenatis nisl at est scelerisque, in porta ipsum convallis. Donec
        sollicitudin pellentesque lacinia. Curabitur ornare aliquam neque, tempor dignissim
        enim commodo ac. Donec sed venenatis orci. Quisque ut venenatis velit, et hendrerit
        arcu. Suspendisse nec ex in tortor elementum tincidunt at tristique leo. Cras nec
        nisi neque. Suspendisse potenti. Vestibulum ante ipsum primis in faucibus orci luctus
        et ultrices posuere cubilia Curae; Nunc turpis enim, consequat eget molestie eu,
        luctus ac ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </string>
    <string name="founders">Founders</string>

    <string name="make_new_question">Make a New Question</string>
    <string name="make_new_question_group">Make a New Question in</string>
    <string name="question_title">Question Title*</string>
    <string name="topic">Topic*</string>
    <string name="select_topic">Select a Topic</string>
    <string name="attachment">Attachment</string>
    <string name="select_file">Select File</string>
    <string name="details">Details*</string>
    <string name="edit_question">Edit Question</string>
    <string name="publish_your_question">Publish Your Question</string>

    <string name="make_meeting">Make a Meeting</string>
    <string name="meeting_title">Meeting Title*</string>
    <string name="select_friends">Select Friends</string>
    <string name="participants">Participants*</string>
    <string name="meeting_button">Set a Meeting</string>
    <string name="type_to_search">Type to Search</string>
    <string name="topic_color">Select a color for topic</string>
    <string name="topic_color_button">Choose color</string>

    <string name="create_topic">Create a Topic</string>
    <string name="topic_title">Topic Title*</string>
    <string name="topic_description">Topic Description</string>
    <string name="crete">Create</string>
    <string name="edit_topic">Edit Topic</string>
    <string name="delete">Delete</string>

    <string name="post_your_answer">Post Your Answer</string>
    <string name="your_answer">Your Answer</string>
    <string name="given_answer">Given Answer(s)</string>
    <string name="no_answers">(There are no answers for this question)</string>

    <string name="create_group">Create a Group</string>
    <string name="group_title">Group Title*</string>
    <string name="group_users">Enter Users*</string>
    <string name="user_emails">User emails</string>
    <string name="check_email">Check E-mails</string>
    <string name="create_group_btn">Create Group</string>
    <string name="group_participants_hint">Please enter emails and separate them with comma(,) character.
    Users will be added after they accept the invitation</string>
    <string name="join">Join</string>
    <string name="reject">Reject</string>
    <string name="no_questions_group">There is not any question in this group. Please create a new one.</string>
    <string name="no_questions_topic">There is not any question in this topic. Please create a new one.</string>

    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>Table Tennis</item>
        <item>Basket Ball</item>
        <item>Foot Ball</item>
        <item>Volley Ball</item>
        <item>Hockey</item>
        <item>Swimming</item>

        <item>Shuttle Badminton 2</item>
        <item>Tennis 2</item>
        <item>Table Tennis 2</item>
        <item>Basket Ball 2</item>
        <item>Foot Ball 2</item>
        <item>Volley Ball 2</item>
        <item>Hockey 2</item>
        <item>Swimming 2</item>

        <item>Shuttle Badminton 3</item>
        <item>Tennis 3</item>
        <item>Table Tennis 3</item>
        <item>Basket Ball 3</item>
        <item>Foot Ball 3</item>
        <item>Volley Ball 3</item>
        <item>Hockey 3</item>
        <item>Swimming 3</item>

        <item>Shuttle Badminton 4</item>
        <item>Tennis 4</item>
        <item>Table Tennis 4</item>
        <item>Basket Ball 4</item>
        <item>Foot Ball 4</item>
        <item>Volley Ball 4</item>
        <item>Hockey 4</item>
        <item>Swimming 4</item>

        <item>Shuttle Badminton 5</item>
        <item>Tennis 5</item>
        <item>Table Tennis 5</item>
        <item>Basket Ball 5</item>
        <item>Foot Ball 5</item>
        <item>Volley Ball 5</item>
        <item>Hockey 5</item>
        <item>Swimming 5</item>
    </string-array>

    <string name="server_connection_home">http://192.168.1.23:51705/api/</string>
    <string name="server_connection">http://192.168.1.23:51705</string>
    <string name="server_connection_school">http://194.27.62.98:51705/api/</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>
    <string name="title_activity_my_groups">MyGroupsActivity</string>
    <string name="title_activity_waiting_groups">WaitingGroupsActivity</string>
    <string name="title_activity_create_group_question">CreateGroupQuestionActivity</string>
    <string name="title_activity_questions_with_group_id">QuestionsWithGroupIDActivity</string>

</resources>
