<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <!--
        <item
            android:id="@+id/nav_ask_question"
            android:icon="@drawable/ic_question_answer_black"
            android:title="@string/menu_questions"
            />
        -->
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_format_list_numbered_black"
            android:title="@string/menu_topics" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_mail_black"
            android:title="@string/menu_contact_us" />

    </group>

    <item
        android:id="@+id/tools"
        android:title="@string/menu_user">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_sign_in"
                android:title="@string/menu_log_in" />
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/ic_person_add_black"
                android:title="@string/menu_register" />
        </menu>
    </item>

</menu>
