<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mustafa.edumn.MakeMeetingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/makeQuestionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/make_meeting"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/meeting_title"
                android:textColor="@color/custom_background"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/meeting_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/raleway"
                android:inputType="textPersonName"
                android:padding="5dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/participants"
                android:textColor="@color/custom_background"
                android:textSize="18sp" />

            <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
                android:id="@+id/searchMultiSpinnerUnlimited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#bdbdbd"
                app:hintText="@string/select_topic" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/topic"
                android:textColor="@color/custom_background"
                android:textSize="18sp" />

            <com.androidbuts.multispinnerfilter.SingleSpinnerSearch
                android:id="@+id/category_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#bdbdbd"
                app:hintText="@string/select_topic" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/attachment"
                android:textColor="@color/custom_background"
                android:textSize="18sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/raleway"
                android:padding="0dp"
                android:text="@string/select_file"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/details"
                android:textColor="@color/custom_background"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/meeting_context"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/raleway"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="10"
                android:maxLines="20"
                android:minLines="8"
                android:scrollbars="vertical" />

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/make_meeting_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/raleway"
                android:text="@string/meeting_button"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                custom:pb_colorComplete="@color/green_complete"
                custom:pb_colorError="@color/red_error"
                custom:pb_colorNormal="@color/colorAccent"
                custom:pb_colorPressed="@color/blue_pressed"
                custom:pb_colorProgress="@color/purple_progress"
                custom:pb_textComplete="Success"
                custom:pb_textError="Error"
                custom:pb_textProgress="Loading" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
